最新版にした + docker-compose.override.yml に対応 + いらんの削除

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   db:
     image: postgres:13
     ports:
-      - '5432:5432'
+      - '5555:5432'
     volumes:
       - db_data:/var/lib/postgresql/data
     environment:
@@ -11,19 +11,20 @@ services:
       POSTGRES_USER: hasura
       POSTGRES_PASSWORD: secret
   hasura:
-    image: hasura/graphql-engine:v2.0.1.cli-migrations-v3
+    image: hasura/graphql-engine:v2.0.10.cli-migrations-v3
     # M1 Macはこのイメージ使えないので↓をdocker-compose.override.ymlで上書きしてね
-    # image: fedormelexin/graphql-engine-arm64:1.3.1
+    # image: fedormelexin/graphql-engine-arm64:latest
     ports:
       - '8080:8080'
     depends_on:
       - 'db'
     restart: on-failure:10
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://hasura:secret@db:5432/postgres
+      HASURA_GRAPHQL_DATABASE_URL: postgres://hasura:secret@db:5555/postgres
       # `make console` により起動する管理画面からのみ操作を行うため、下記は false に
-      HASURA_GRAPHQL_ENABLE_CONSOLE: 'false'
+      HASURA_GRAPHQL_ADMIN_SECRET: secret
       HASURA_GRAPHQL_DEV_MODE: 'true'
+      HASURA_GRAPHQL_ENABLE_CONSOLE: 'false'
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
 volumes:
   db_data:
